<resources>
    <string name="app_name">MBTM</string>
    <string name="sub_title">MBTI와 관련된 모든 것</string>
    <string name="title">MBTM</string>
    <string name="signup">회원가입</string>
    <string name="login">로그인</string>
    <string name="sub_title_find_id">아이디 찾기</string>
    <string name="enter_name">닉네임 입력</string>
    <string name="enter_email">이메일 주소 입력</string>
    <string name="enter_phone">전화번호 입력</string>
    <string name="nickname">닉네임</string>
    <string name="phone">휴대폰 번호</string>
    <string name="go_login">로그인 하러가기</string>
    <string name="reset_pw">비밀번호 재설정</string>
    <string name="change_pw">비밀번호 변경</string>
    <string name="get_code">인증코드 받기</string>
    <string name="check">확 인</string>
    <string name="title_activity_find_id_finish">FindIdFinish</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>