<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".findIdInput">

    <TextView
        android:id="@+id/first_app_title_input_tv"
        style="@style/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_marginBottom="531dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/first_app_sub_title_findid_input_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:text="@string/sub_title_find_id"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_app_title_input_tv" />


    <TextView
        android:id="@+id/enter_name_input_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_name"
        android:textColor="#4E4D4D"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/nickname_input_et"
        app:layout_constraintLeft_toLeftOf="@id/nickname_input_et"
        />


    <EditText

        android:id="@+id/nickname_input_et"
        style="@style/loginBox"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginBottom="286dp"
        android:width="320dp"
        android:height="48dp"
        android:hint="닉네임"
        android:background="#F5F5F5"
        app:layout_constraintStart_toStartOf="match_parent"
        app:layout_constraintTop_toTopOf="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/first_findId_input_btn"
        />

    <TextView
        android:id="@+id/enter_phone_input_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_phone"
        android:textColor="#4E4D4D"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/login_password_input_et"
        app:layout_constraintLeft_toLeftOf="@id/login_password_input_et"
        />


    <EditText
        android:id="@+id/login_password_input_et"
        style="@style/loginBox"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginBottom="174dp"
        android:width="320dp"
        android:height="48dp"
        android:hint="전화번호"
        android:background="#F5F5F5"
        app:layout_constraintStart_toStartOf="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="match_parent"
        app:layout_constraintBottom_toBottomOf="@id/first_findId_input_btn"
        />




    <TextView
        android:id="@+id/first_findId_input_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:width="320dp"
        android:height="48dp"
        style="@style/findIdButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.88" />


</androidx.constraintlayout.widget.ConstraintLayout>